project section done

--- a/index.html
+++ b/index.html
@@ -395,13 +395,12 @@
                 stroke-width="2"
                 stroke-linecap="round"
                 stroke-linejoin="round"
-                class="lucide lucide-layers2-icon lucide-layers-2"
+                class="lucide lucide-hammer-icon lucide-hammer"
               >
+                <path d="m15 12-9.373 9.373a1 1 0 0 1-3.001-3L12 9" />
+                <path d="m18 15 4-4" />
                 <path
-                  d="M13 13.74a2 2 0 0 1-2 0L2.5 8.87a1 1 0 0 1 0-1.74L11 2.26a2 2 0 0 1 2 0l8.5 4.87a1 1 0 0 1 0 1.74z"
-                />
-                <path
-                  d="m20 14.285 1.5.845a1 1 0 0 1 0 1.74L13 21.74a2 2 0 0 1-2 0l-8.5-4.87a1 1 0 0 1 0-1.74l1.5-.845"
+                  d="m21.5 11.5-1.914-1.914A2 2 0 0 1 19 8.172v-.344a2 2 0 0 0-.586-1.414l-1.657-1.657A6 6 0 0 0 12.516 3H9l1.243 1.243A6 6 0 0 1 12 8.485V10l2 2h1.172a2 2 0 0 1 1.414.586L18.5 14.5"
                 />
               </svg>
             </div>
@@ -436,14 +435,11 @@
                 stroke-width="2"
                 stroke-linecap="round"
                 stroke-linejoin="round"
-                class="lucide lucide-layers2-icon lucide-layers-2"
+                class="lucide lucide-database-icon lucide-database"
               >
-                <path
-                  d="M13 13.74a2 2 0 0 1-2 0L2.5 8.87a1 1 0 0 1 0-1.74L11 2.26a2 2 0 0 1 2 0l8.5 4.87a1 1 0 0 1 0 1.74z"
-                />
-                <path
-                  d="m20 14.285 1.5.845a1 1 0 0 1 0 1.74L13 21.74a2 2 0 0 1-2 0l-8.5-4.87a1 1 0 0 1 0-1.74l1.5-.845"
-                />
+                <ellipse cx="12" cy="5" rx="9" ry="3" />
+                <path d="M3 5V19A9 3 0 0 0 21 19V5" />
+                <path d="M3 12A9 3 0 0 0 21 12" />
               </svg>
             </div>
             <div>
@@ -460,6 +456,251 @@
             <p class="bg-black/20 px-5 py-2 rounded-2xl w-auto">MongoDB</p>
             <p class="bg-black/20 px-5 py-2 rounded-2xl w-auto">PostgreSQL</p>
             <p class="bg-black/20 px-5 py-2 rounded-2xl w-auto">Prisma</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- ......... PROJECTS SECTION .............. -->
+    <section id="projects" class="py-20">
+      <div class="mx-40">
+        <div class="relative flex items-center">
+          <div
+            class="absolute top-1/2 translate-y-1/2 left-0 w-10 text-blue-500 bg-blue-500 border border-blue-500"
+          ></div>
+          <p class="indicator-text px-12 text-blue-500 font-bold">PORTFOLIO</p>
+        </div>
+
+        <h1 class="text-7xl font-extrabold py-5">Selected Work</h1>
+
+        <p class="text-xl text-(--color-text-secondary) w-[600px]">
+          A collection of digital products crafted with
+          <span class="text-(--color-text-primary)">React</span>,
+          <span class="text-(--color-text-primary)">Tailwind</span>, and a focus
+          on user experience
+        </p>
+
+        <!-- ......... FRAMERATES .............. -->
+        <div class="py-20">
+          <div class="flex justify-between items-center gap-20 group">
+            <div class="w-1/2 overflow-hidden relative">
+              <img
+                src="./images/framerate.webp"
+                alt=""
+                class="card w-full h-full group-hover:scale-[1.05] transition-transform ease-in"
+              />
+              <div
+                class="absolute bottom-0 bg-linear-to-t from-white via-20% to-transparent w-full h-1/4 z-50"
+              ></div>
+            </div>
+
+            <div class="w-1/2 flex flex-col gap-5">
+              <h4 class="font-bold text-4xl">FrameRates Movie Search App</h4>
+              <p class="text-lg text-(--color-text-secondary)">
+                A simple React application that uses an external API to search
+                and display movies based on user input, showcasing core concepts
+                like API integration and dynamic rendering.
+              </p>
+              <div class="flex gap-2 items-center">
+                <p class="bg-(--color-tabs) py-1 px-3 rounded-2xl">React</p>
+                <p class="bg-(--color-tabs) py-1 px-3 rounded-2xl">CSS</p>
+              </div>
+              <div class="flex gap-2 items-center">
+                <div class="flex items-center gap-2 group/child cursor-pointer">
+                  <a
+                    href="https://movie-search-cgo.pages.dev/"
+                    target="_blank"
+                    class="project-btn"
+                    >View Project</a
+                  >
+                  <span
+                    class="icon group-hover/child:translate-x-1 transition-transform ease-in"
+                    ><svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="24"
+                      height="24"
+                      viewBox="0 0 24 24"
+                      fill="none"
+                      stroke="currentColor"
+                      stroke-width="2"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      class="lucide lucide-arrow-right-icon lucide-arrow-right"
+                    >
+                      <path d="M5 12h14" />
+                      <path d="m12 5 7 7-7 7" /></svg
+                  ></span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- ......... AESTHESIA  .............. -->
+        <div class="py-20">
+          <div
+            class="flex flex-row-reverse justify-between items-center gap-20 group"
+          >
+            <div class="w-1/2 overflow-hidden relative">
+              <img
+                src="./images/aesthesia.webp"
+                alt=""
+                class="card w-full h-full group-hover:scale-[1.05] transition-transform ease-in"
+              />
+              <div
+                class="absolute bottom-0 bg-linear-to-t from-white via-20% to-transparent w-full h-1/4 z-50"
+              ></div>
+            </div>
+
+            <div class="w-1/2 flex flex-col gap-5">
+              <h4 class="font-bold text-4xl">
+                Aesthesia Haven - E-commerce Site
+              </h4>
+              <p class="text-lg text-(--color-text-secondary)">
+                Aesthesia Haven is a modern ecommerce storefront built to
+                showcase and sell fashion products. The site features clean
+                design and responsive layouts that enhance the user shopping
+                experience across devices. This project demonstrates my ability
+                to build commercial web experiences with real-world product
+                browsing, payment integration and conversion flows.
+              </p>
+              <div class="flex gap-2 items-center">
+                <p class="bg-(--color-tabs) py-1 px-3 rounded-2xl">React</p>
+                <p class="bg-(--color-tabs) py-1 px-3 rounded-2xl">
+                  Tailwind CSS
+                </p>
+                <p class="bg-(--color-tabs) py-1 px-3 rounded-2xl">Express</p>
+                <p class="bg-(--color-tabs) py-1 px-3 rounded-2xl">MongoDB</p>
+              </div>
+
+              <div class="flex items-center gap-10">
+                <div class="flex gap-2 items-center">
+                  <div
+                    class="flex items-center gap-2 group/child cursor-pointer"
+                  >
+                    <a
+                      href="https://www.aesthesiahaven.com/"
+                      target="_blank"
+                      class="project-btn"
+                      >View Project</a
+                    >
+                    <span
+                      class="icon group-hover/child:translate-x-1 transition-transform ease-in"
+                      ><svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="24"
+                        height="24"
+                        viewBox="0 0 24 24"
+                        fill="none"
+                        stroke="currentColor"
+                        stroke-width="2"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                        class="lucide lucide-arrow-right-icon lucide-arrow-right"
+                      >
+                        <path d="M5 12h14" />
+                        <path d="m12 5 7 7-7 7" /></svg
+                    ></span>
+                  </div>
+                </div>
+
+                <div class="flex gap-2 items-center">
+                  <div
+                    class="flex flex-row-reverse items-center gap-2 group/child cursor-pointer text-(--color-text-secondary)"
+                  >
+                    <a
+                      href="https://github.com/Pharez-Oyelade/aesthesia-portfolio"
+                      target="_blank"
+                      class="project-btn"
+                      >Source Code</a
+                    >
+                    <span
+                      class="icon group-hover/child:-translate-x-1 transition-transform ease-in"
+                      ><svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="24"
+                        height="24"
+                        viewBox="0 0 24 24"
+                        fill="none"
+                        stroke="currentColor"
+                        stroke-width="2"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                        class="lucide lucide-code-icon lucide-code"
+                      >
+                        <path d="m16 18 6-6-6-6" />
+                        <path d="m8 6-6 6 6 6" /></svg
+                    ></span>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- ......... VENDORA  .............. -->
+        <div class="py-20">
+          <div class="flex justify-between items-center gap-20 group">
+            <div class="w-1/2 overflow-hidden relative">
+              <img
+                src="./images/VENDORA.webp"
+                alt=""
+                class="card w-full h-full group-hover:scale-[1.05] transition-transform ease-in"
+              />
+              <div
+                class="absolute bottom-0 bg-linear-to-t from-white via-20% to-transparent w-full h-1/4 z-50"
+              ></div>
+            </div>
+
+            <div class="w-1/2 flex flex-col gap-5">
+              <h4 class="font-bold text-4xl">Sales Management Dashboard</h4>
+              <p class="text-lg text-(--color-text-secondary)">
+                A high-performance analytics tool designed for shop owners to
+                visualize real-time data, manage inventory, and track sales
+                performance with intuitive charts.
+              </p>
+              <div class="flex gap-2 items-center">
+                <p class="bg-(--color-tabs) py-1 px-3 rounded-2xl">Next.js</p>
+                <p class="bg-(--color-tabs) py-1 px-3 rounded-2xl">
+                  Tailwind CSS
+                </p>
+                <p class="bg-(--color-tabs) py-1 px-3 rounded-2xl">Express</p>
+                <p class="bg-(--color-tabs) py-1 px-3 rounded-2xl">
+                  PostgreSQL
+                </p>
+                <p class="bg-(--color-tabs) py-1 px-3 rounded-2xl">Prisma</p>
+                <p class="bg-(--color-tabs) py-1 px-3 rounded-2xl">Recharts</p>
+              </div>
+              <div class="flex gap-2 items-center">
+                <div
+                  class="flex flex-row-reverse items-center gap-2 group/child cursor-pointer text-(--color-text-secondary)"
+                >
+                  <a
+                    href="https://github.com/Pharez-Oyelade/smartstore"
+                    target="_blank"
+                    class="project-btn"
+                    >Source Code</a
+                  >
+                  <span
+                    class="icon group-hover/child:-translate-x-1 transition-transform ease-in"
+                    ><svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="24"
+                      height="24"
+                      viewBox="0 0 24 24"
+                      fill="none"
+                      stroke="currentColor"
+                      stroke-width="2"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      class="lucide lucide-code-icon lucide-code"
+                    >
+                      <path d="m16 18 6-6-6-6" />
+                      <path d="m8 6-6 6 6 6" /></svg
+                  ></span>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
