--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
 
     <!-- ......... PROJECTS SECTION .............. -->
     <section id="projects" class="py-20">
-      <div class="mx-40">
+      <div class="mx-10 lg:mx-40">
         <div class="relative flex items-center">
           <div
             class="absolute top-1/2 translate-y-1/2 left-0 w-10 text-blue-500 bg-blue-500 border border-blue-500"
@@ -473,7 +473,7 @@
 
         <h1 class="text-7xl font-extrabold py-5">Selected Work</h1>
 
-        <p class="text-xl text-(--color-text-secondary) w-[600px]">
+        <p class="text-xl text-(--color-text-secondary) max-w-150
           A collection of digital products crafted with
           <span class="text-(--color-text-primary)">React</span>,
           <span class="text-(--color-text-primary)">Tailwind</span>, and a focus
@@ -482,8 +482,8 @@
 
         <!-- ......... FRAMERATES .............. -->
         <div class="py-20">
-          <div class="flex justify-between items-center gap-20 group">
-            <div class="w-1/2 overflow-hidden relative">
+          <div class="flex flex-col lg:flex-row justify-between items-center gap-20 group">
+            <div class="w-full lg:w-1/2 overflow-hidden relative">
               <img
                 src="./images/framerate.webp"
                 alt=""
@@ -494,7 +494,7 @@
               ></div>
             </div>
 
-            <div class="w-1/2 flex flex-col gap-5">
+            <div class="w-full lg:w-1/2 flex flex-col gap-5">
               <h4 class="font-bold text-4xl">FrameRates Movie Search App</h4>
               <p class="text-lg text-(--color-text-secondary)">
                 A simple React application that uses an external API to search
@@ -539,9 +539,9 @@
         <!-- ......... AESTHESIA  .............. -->
         <div class="py-20">
           <div
-            class="flex flex-row-reverse justify-between items-center gap-20 group"
+            class="flex flex-col-reverse lg:flex-row-reverse justify-between items-center gap-20 group"
           >
-            <div class="w-1/2 overflow-hidden relative">
+            <div class="w-full lg:w-1/2 overflow-hidden relative">
               <img
                 src="./images/aesthesia.webp"
                 alt=""
@@ -552,7 +552,7 @@
               ></div>
             </div>
 
-            <div class="w-1/2 flex flex-col gap-5">
+            <div class="w-full lg:w-1/2 flex flex-col gap-5">
               <h4 class="font-bold text-4xl">
                 Aesthesia Haven - E-commerce Site
               </h4>
@@ -640,8 +640,8 @@
 
         <!-- ......... VENDORA  .............. -->
         <div class="py-20">
-          <div class="flex justify-between items-center gap-20 group">
-            <div class="w-1/2 overflow-hidden relative">
+          <div class="flex flex-col lg:flex-row justify-between items-center gap-20 group">
+            <div class="w-full lg:w-1/2 overflow-hidden relative">
               <img
                 src="./images/VENDORA.webp"
                 alt=""
@@ -652,14 +652,14 @@
               ></div>
             </div>
 
-            <div class="w-1/2 flex flex-col gap-5">
+            <div class="w-full lg:w-1/2 flex flex-col gap-5">
               <h4 class="font-bold text-4xl">Sales Management Dashboard</h4>
               <p class="text-lg text-(--color-text-secondary)">
                 A high-performance analytics tool designed for shop owners to
                 visualize real-time data, manage inventory, and track sales
                 performance with intuitive charts.
               </p>
-              <div class="flex gap-2 items-center">
+              <div class="flex flex-wrap gap-2 items-center">
                 <p class="bg-(--color-tabs) py-1 px-3 rounded-2xl">Next.js</p>
                 <p class="bg-(--color-tabs) py-1 px-3 rounded-2xl">
                   Tailwind CSS
