project portfolio fix

--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
                 and display movies based on user input, showcasing core concepts
                 like API integration and dynamic rendering.
               </p>
-              <div class="flex gap-2 items-center">
+              <div class="flex flex-wrap gap-2 items-center">
                 <p class="bg-(--color-tabs) py-1 px-3 rounded-2xl">React</p>
                 <p class="bg-(--color-tabs) py-1 px-3 rounded-2xl">CSS</p>
               </div>
@@ -564,7 +564,7 @@
                 to build commercial web experiences with real-world product
                 browsing, payment integration and conversion flows.
               </p>
-              <div class="flex gap-2 items-center">
+              <div class="flex flex-wrap gap-2 items-center">
                 <p class="bg-(--color-tabs) py-1 px-3 rounded-2xl">React</p>
                 <p class="bg-(--color-tabs) py-1 px-3 rounded-2xl">
                   Tailwind CSS
